Enable focus-events tmux config for Neovim autoread to work properly

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,9 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Set focus-events on (important for Neovim autoread)
+set -g focus-events on
+
 # remap prefix from 'C-b' to 'C-\\'
 unbind C-b
 set-option -g prefix C-\\
