--- a/.tmux.conf
+++ b/.tmux.conf
@@ -107,6 +107,15 @@ set -g @nova-rows 0
 set -g @nova-segments-0-left "mode"
 set -g @nova-segments-0-right "session"
 
+# Popup
+bind -n M-p display-popup -E tmux-popup.zsh
+bind -T popup M-p detach
+
+# This lets us do scrollback and search within the popup
+bind -T popup C-[ copy-mode
+
+set-option -g history-limit 10000
+
 # ------------------------------------------------------
 # sesh config
 # ------------------------------------------------------
@@ -125,9 +134,6 @@ bind-key 's' run-shell "sesh connect \"$(
     --preview 'sesh preview {}'
 )\""
 bind -N "last-session (via sesh) " P run-shell "sesh last"
-
-# Lazygit popup - opens lazygit in a floating window (using current pane directory)
-bind-key g display-popup -w 90% -h 90% -E -d "#{pane_current_path}" "lazygit"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
