main: Update the floating pane color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -110,6 +110,8 @@ set -g @nova-segments-0-right "session"
 # Popup
 bind -n M-p display-popup -E tmux-popup.zsh
 bind -T popup M-p detach
+set -g popup-border-style fg="#{@color-main}"
+set -g popup-border-lines rounded
 
 # This lets us do scrollback and search within the popup
 bind -T popup C-[ copy-mode
